unpackaged/main/default/objects/nbavs__SecurePaySession__c/nbavs__SecurePaySession__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>SecurePaySession Deprecated</label>
</CustomObject>