unpackaged/main/default/objects/nbavs__SecurePaySession__c/fields/nbavs__access_token_0__c.field-meta.xml
<CustomField>
    <fullName>nbavs__access_token_0__c</fullName>
    <label>access_token_0</label>
    <length>255</length>
    <type>Text</type>
</CustomField>