unpackaged/main/default/objects/nbavs__SecurePaySession__c/fields/nbavs__client_id__c.field-meta.xml
<CustomField>
    <fullName>nbavs__client_id__c</fullName>
    <label>client_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>