unpackaged/main/default/objects/nbavs__SecurePaySession__c/fields/nbavs__expires__c.field-meta.xml
<CustomField>
    <fullName>nbavs__expires__c</fullName>
    <label>expires</label>
    <type>DateTime</type>
</CustomField>