unpackaged/main/default/objects/nbavs__SecurePaySession__c/fields/nbavs__expires_in__c.field-meta.xml
<CustomField>
    <fullName>nbavs__expires_in__c</fullName>
    <label>expires_in</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>