unpackaged/main/default/objects/nbavs__SecurePaySession__c/fields/nbavs__formName__c.field-meta.xml
<CustomField>
    <fullName>nbavs__formName__c</fullName>
    <label>Form Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>