unpackaged/main/default/objects/nbavs__SecurePaySession__c/fields/nbavs__Id__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Id__c</fullName>
    <label>Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>