unpackaged/main/default/objects/nbavs__SecurePaySession__c/fields/nbavs__issued__c.field-meta.xml
<CustomField>
    <fullName>nbavs__issued__c</fullName>
    <label>issued</label>
    <type>DateTime</type>
</CustomField>