unpackaged/main/default/objects/nbavs__SecurePaySession__c/fields/nbavs__LinkId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LinkId__c</fullName>
    <label>LinkId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>