unpackaged/main/default/objects/nbavs__SecurePaySession__c/fields/nbavs__objectId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__objectId__c</fullName>
    <label>Object Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>