unpackaged/main/default/objects/nbavs__SecurePaySession__c/fields/nbavs__refresh_token__c.field-meta.xml
<CustomField>
    <fullName>nbavs__refresh_token__c</fullName>
    <label>refresh_token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>