unpackaged/main/default/objects/nbavs__SecurePaySession__c/fields/nbavs__tenantName__c.field-meta.xml
<CustomField>
    <fullName>nbavs__tenantName__c</fullName>
    <label>tenantName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>