unpackaged/main/default/objects/nbavs__SecurePaySession__c/fields/nbavs__token_type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__token_type__c</fullName>
    <label>token_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>