unpackaged/main/default/objects/nbavs__SecurePaySession__c/fields/nbavs__uuid__c.field-meta.xml
<CustomField>
    <fullName>nbavs__uuid__c</fullName>
    <label>uuid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>